# gnome-ai

./: .gitignore  README.md
docs/planning/: implementation_plan.md  task.md
gnome-ai/core/: Cargo.toml
gnome-ai/core/src/: main.rs
gnome-ai/shell-extension/: .gitignore  metadata.json  package.json  tsconfig.json
gnome-ai/shell-extension/src/: extension.ts
gnome-ai/specs/: org.gnome.AI.xml  policy.toml
gnome-ai/tools/: tool_clipboard.py  tool_quick_note.py
