[package]
name = "gnome-ai-core"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
zbus = { version = "5.13.1", features = ["tokio"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
anyhow = "1.0"
# For policy engine
toml = "0.9.11+spec-1.1.0"
log = "0.4"
